QUARTZ-75 [Refactor] 담당자가 null인 티켓에 대해서도 조회 가능하도록 수정